--- a/indexo.html
+++ b/indexo.html
@@ -4,7 +4,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Assignment Solution for Module 2</title>
-    <link rel="stylesheet" href="./indexo_files/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
